[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/leaf.png" type="Texture" id=1]
[ext_resource path="res://PumkinLeaf.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.65865, 5.50057 )

[node name="PumpkinLeaf" type="Area2D"]
z_index = 5
script = ExtResource( 2 )

[node name="PumkinLeaf" type="Sprite" parent="."]
position = Vector2( -7.01025, -5.99002 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.01025, -5.99002 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_PumpkinLeaf_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PumpkinLeaf_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
